Phase 1 (without Team Members Update and social links)

--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
               <nav role="navigation" class="nav-menu w-nav-menu">
                 <div class="nav-menu-flex">
                   <!-- Home -->
-                  <a href="index.html" class="nav-link w-nav-link">Home</a>
+                  <a href="/" class="nav-link w-nav-link">Home</a>
 
                   <!-- About Us -->
 
@@ -1520,7 +1520,8 @@
                               effective campaign on Google.
                             </p>
                             <a
-                              href="https://forms.gle/D1pTa5N1kff52oPT7"
+                            href="https://forms.gle/D1pTa5N1kff52oPT7"
+                            target="_blank"
                               class="service-learn-more-link w-inline-block"
                               ><div style="color: #0d0d0d">Explore Service</div>
                               <img
@@ -1566,7 +1567,8 @@
                               Facebook, Instagram, LinkedIn.
                             </p>
                             <a
-                              href="https://forms.gle/D1pTa5N1kff52oPT7"
+                            href="https://forms.gle/D1pTa5N1kff52oPT7"
+                            target="_blank"
                               class="service-learn-more-link w-inline-block"
                               ><div style="color: hsla(0, 0%, 100%, 1)">
                                 Explore Service
@@ -1621,7 +1623,8 @@
                               attention and communicates.
                             </p>
                             <a
-                              href="https://forms.gle/D1pTa5N1kff52oPT7"
+                            href="https://forms.gle/D1pTa5N1kff52oPT7"
+                            target="_blank"
                               class="service-learn-more-link w-inline-block"
                               ><div style="color: hsla(0, 0%, 100%, 1)">
                                 Explore Service
@@ -1665,7 +1668,8 @@
                               style="color: #0d0d0d"
                               class="service-contant-details">Craft compelling content to engage and convert your audience effectively.</p>
                             <a
-                              href="https://forms.gle/D1pTa5N1kff52oPT7"
+                            href="https://forms.gle/D1pTa5N1kff52oPT7"
+                            target="_blank"
                               class="service-learn-more-link w-inline-block"
                               ><div style="color: #0d0d0d">Explore Service</div>
                               <img
@@ -1707,7 +1711,8 @@
                               style="color: hsla(0, 0%, 100%, 1)"
                               class="service-contant-details">Boost efficiency with our advanced AI-driven solutions.</p>
                             <a
-                              href="https://forms.gle/D1pTa5N1kff52oPT7"
+                            href="https://forms.gle/D1pTa5N1kff52oPT7"
+                            target="_blank"
                               class="service-learn-more-link w-inline-block"
                               ><div style="color: hsla(0, 0%, 100%, 1)">
                                 Explore Service
@@ -1762,7 +1767,8 @@
                               strategic PR campaigns.
                             </p>
                             <a
-                              href="https://forms.gle/D1pTa5N1kff52oPT7"
+                            href="https://forms.gle/D1pTa5N1kff52oPT7"
+                            target="_blank"
                               class="service-learn-more-link w-inline-block"
                               ><div style="color: hsla(0, 0%, 100%, 1)">
                                 Explore Service
@@ -4135,7 +4141,7 @@
                                       alt=""
                                       class="team-social-img" /></a
                                   ><a
-                                    href="https://www.facebook.com/"
+                                    href=https://www.facebook.com/profile.php?id=61558529533907
                                     target="_blank"
                                     class="team-social-link w-inline-block"
                                     ><img
@@ -4144,7 +4150,7 @@
                                       alt=""
                                       class="team-social-img" /></a
                                   ><a
-                                    href="https://www.instagram.com/"
+                                    href="https://www.instagram.com/hexovision/"
                                     target="_blank"
                                     class="team-social-link w-inline-block"
                                     ><img
@@ -4233,7 +4239,7 @@
                                       alt=""
                                       class="team-social-img" /></a
                                   ><a
-                                    href="https://www.facebook.com/"
+                                    href=https://www.facebook.com/profile.php?id=61558529533907
                                     target="_blank"
                                     class="team-social-link w-inline-block"
                                     ><img
@@ -4242,7 +4248,7 @@
                                       alt=""
                                       class="team-social-img" /></a
                                   ><a
-                                    href="https://www.instagram.com/"
+                                    href="https://www.instagram.com/hexovision/"
                                     target="_blank"
                                     class="team-social-link w-inline-block"
                                     ><img
@@ -4331,7 +4337,7 @@
                                       alt=""
                                       class="team-social-img" /></a
                                   ><a
-                                    href="https://www.facebook.com/"
+                                    href=https://www.facebook.com/profile.php?id=61558529533907
                                     target="_blank"
                                     class="team-social-link w-inline-block"
                                     ><img
@@ -4340,7 +4346,7 @@
                                       alt=""
                                       class="team-social-img" /></a
                                   ><a
-                                    href="https://www.instagram.com/"
+                                    href="https://www.instagram.com/hexovision/"
                                     target="_blank"
                                     class="team-social-link w-inline-block"
                                     ><img
@@ -4468,7 +4474,7 @@
                                       alt=""
                                       class="team-social-img" /></a
                                   ><a
-                                    href="https://www.facebook.com/"
+                                    href=https://www.facebook.com/profile.php?id=61558529533907
                                     target="_blank"
                                     class="team-social-link w-inline-block"
                                     ><img
@@ -5670,7 +5676,7 @@
                   out to our amazing support team for further assistance.
                 </p>
                 <a
-                  href="/inner-pages/articles"
+                  href="/blogs.html"
                   class="primary-button w-inline-block"
                   ><div class="primary-button-text-block">
                     Explore All Articles
@@ -6048,7 +6054,7 @@
               </p>
               <div class="section-buttom-wrapper">
                 <a
-                  href="/about-us.html" target="_blank"
+                  href="/about-us.html"
                   class="primary-button w-inline-block"
                   ><div class="primary-button-text-block">Get Started Now</div>
                   <div class="primary-button-text-block is-text-absolute">
@@ -6146,7 +6152,7 @@
                   <div class="fotter-single-link-flex">
                     <div class="fotter-single-link-div">
                       <a
-                        href="index.html"
+                        href="/"
                         aria-current="page"
                         class="fotter-single-link w-inline-block w--current"
                         ><div>Home</div></a
@@ -6296,7 +6302,7 @@
               <div class="fotter-bottom-shape"></div>
               <div class="copy-right-text">
                 © Copyright -
-                <a href="/index.html" class="copy-right-link" style="text-decoration: none;"
+                <a href="//" class="copy-right-link" style="text-decoration: none;"
                   >Hexovision Technologies Private Limited</a
                 >
                 <!-- <a href="https://webflow.com/templates/designers/shohana-sharmin" target="_blank" class="copy-right-link">Zohaflow </a>
