footer and header

--- a/terms-condition.html
+++ b/terms-condition.html
@@ -1050,14 +1050,14 @@
             >
               <div class="section-title-shape-wrap">
                 <img
-                  src="../images/rectangle-205.webp"
+                  src="images/rectangle-205.webp"
                   loading="lazy"
                   alt=""
                   class="section-title-shape"
                 />
                 <div class="section-title-shape-text">Ready to Grow?</div>
                 <img
-                  src="../images/rectangle-204.webp"
+                  src="images/rectangle-204.webp"
                   loading="lazy"
                   alt=""
                   class="section-title-shape"
@@ -1069,20 +1069,18 @@
                 </h2>
               </div>
               <p class="section-details fotter-details">
-                Are you ready to elevate your business and achieve remarkable
-                growth? We specialize in crafting customized marketing that
-                drive results.
+                Partner with Hexovision to elevate your brand through data-driven digital marketing strategies designed for growth and success. Let’s grow together!
               </p>
               <div class="section-buttom-wrapper">
                 <a
-                  href="/inner-pages/pricing"
+                  href="/about-us.html"
                   class="primary-button w-inline-block"
                   ><div class="primary-button-text-block">Get Started Now</div>
                   <div class="primary-button-text-block is-text-absolute">
                     Get Started Now
                   </div></a
                 ><a
-                  href="/inner-pages/contact-us"
+                  href="https://forms.gle/D1pTa5N1kff52oPT7" target="_blank"
                   class="secondary-button w-inline-block"
                   ><div class="primary-button-text-block">Contact Us Now</div>
                   <div class="primary-button-text-block is-text-absolute">
@@ -1091,6 +1089,9 @@
                 >
               </div>
             </div>
+
+            <!-- Footer -->
+
             <div class="fotter-contant-wrapper">
               <div
                 data-w-id="d5f0a75d-d5c1-4f6b-6e6f-4e4873846567"
@@ -1098,7 +1099,7 @@
               >
                 <a href="/" class="fotter-contant-img-link w-inline-block"
                   ><img
-                    src="../images/logo.webp"
+                    src="images/logo.webp"
                     loading="lazy"
                     alt=""
                     class="fotter-contant-link-img"
@@ -1106,11 +1107,11 @@
                 <div class="fotter-social-link-wrapper">
                   <a
                     data-w-id="d5f0a75d-d5c1-4f6b-6e6f-4e487384656b"
-                    href="https://www.facebook.com/"
+                    href="https://www.facebook.com/profile.php?id=61558529533907    "
                     target="_blank"
                     class="fotter-social-link w-inline-block"
                     ><img
-                      src="../images/group-201171275887.webp"
+                      src="images/group-201171275887.webp"
                       loading="lazy"
                       alt=""
                       class="fotter-social-link-img" />
@@ -1121,18 +1122,18 @@
                     target="_blank"
                     class="fotter-social-link w-inline-block"
                     ><img
-                      src="../images/group-201171275888.webp"
+                      src="images/group-201171275888.webp"
                       loading="lazy"
                       alt=""
                       class="fotter-social-link-img" />
                     <div class="fotter-social-link-div"></div></a
                   ><a
                     data-w-id="d5f0a75d-d5c1-4f6b-6e6f-4e4873846571"
-                    href="https://www.instagram.com/"
+                    href="https://www.instagram.com/hexovision/"
                     target="_blank"
                     class="fotter-social-link w-inline-block"
                     ><img
-                      src="../images/group-201171275889.webp"
+                      src="images/group-201171275889.webp"
                       loading="lazy"
                       alt=""
                       class="fotter-social-link-img" />
@@ -1143,7 +1144,7 @@
                     target="_blank"
                     class="fotter-social-link w-inline-block"
                     ><img
-                      src="../images/group-201171275890.webp"
+                      src="images/group-201171275890.webp"
                       loading="lazy"
                       alt=""
                       class="fotter-social-link-img" />
@@ -1151,6 +1152,7 @@
                   ></a>
                 </div>
               </div>
+              
               <div class="fotter-shape-div"></div>
               <div
                 data-w-id="d5f0a75d-d5c1-4f6b-6e6f-4e4873846578"
@@ -1160,7 +1162,7 @@
                   <div class="fotter-single-link-wrap">
                     <h5 class="fotter-single-link-title">Menu</h5>
                     <img
-                      src="../images/rectangle-2069.svg"
+                      src="images/rectangle-2069.svg"
                       loading="lazy"
                       alt=""
                       class="fotter-div-img-shape"
@@ -1168,79 +1170,61 @@
                   </div>
                   <div class="fotter-single-link-flex">
                     <div class="fotter-single-link-div">
-                      <a href="/home" class="fotter-single-link w-inline-block"
+                      <a
+                        href="/"
+                        aria-current="page"
+                        class="fotter-single-link w-inline-block w--current"
                         ><div>Home</div></a
-                      ><a
-                        href="/inner-pages/about-us"
+                      >
+                      <a
+                        href="/inner-pages/"
                         class="fotter-single-link w-inline-block"
                         ><div>About Us</div></a
-                      ><a
-                        href="/inner-pages/services"
+                      >
+                      <a
+                        href="/services.html"
                         class="fotter-single-link w-inline-block"
                         ><div>Services</div></a
-                      ><a
-                        href="https://marqencyzf.webflow.io/service/public-relations"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Service Single</div></a
-                      ><a
+                      >
+                      <!-- <a href="https://marqencyzf.webflow.io/service/public-relations" class="fotter-single-link w-inline-block"><div>Service Single</div></a> -->
+                      <!-- <a
                         href="/inner-pages/projects"
                         class="fotter-single-link w-inline-block"
                         ><div>Projects</div></a
-                      ><a
-                        href="https://marqencyzf.webflow.io/project/building-a-strong-seo-presence"
+                      > -->
+                      <!-- <a
+                        href="/inner-pages/contact-us.html"
                         class="fotter-single-link w-inline-block"
-                        ><div>Project Single</div></a
                       >
+                        Contact Us</a
+                      > -->
+                      <!-- <a href="https://marqencyzf.webflow.io/project/building-a-strong-seo-presence" class="fotter-single-link w-inline-block"><div>Project Single</div></a> -->
                     </div>
+
                     <div class="fotter-single-link-div">
+                      <a href="/blogs.html" class="fotter-single-link w-inline-block"><div>Blogs</div></a>
                       <a
-                        href="/inner-pages/pricing"
+                        href="/inner-pages/projects"
                         class="fotter-single-link w-inline-block"
-                        ><div>Pricing</div></a
-                      ><a
-                        href="https://marqencyzf.webflow.io/product/starter-plan"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Pricing Single</div></a
-                      ><a
-                        href="/inner-pages/team"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Team</div></a
-                      ><a
-                        href="https://marqencyzf.webflow.io/team/mr-david-martinez"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Team Single</div></a
-                      ><a
-                        href="/inner-pages/articles"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Articles</div></a
-                      ><a
-                        href="https://marqencyzf.webflow.io/blog/how-to-create-an-engaging-content-that-converts"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Article Single</div></a
+                        ><div>Privacy Policies</div></a
                       >
+                      <a
+                        href="/inner-pages/contact-us.html"
+                        class="fotter-single-link w-inline-block"
+                      >
+                      Terms & Conditions</a
+                      >
+                      <!-- <a href="https://marqencyzf.webflow.io/team/mr-david-martinez" class="fotter-single-link w-inline-block"><div>Team Single</div></a> -->
+                      <!-- <a href="/inner-pages/articles" class="fotter-single-link w-inline-block"><div>Articles</div></a> -->
+                      <!-- <a href="https://marqencyzf.webflow.io/blog/how-to-create-an-engaging-content-that-converts" class="fotter-single-link w-inline-block"><div>Article Single</div></a> -->
                     </div>
+
                     <div class="fotter-single-link-div">
-                      <a
-                        href="/inner-pages/contact-us"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Contact Us</div></a
-                      ><a
-                        href="/authentication-pages/sign-up"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Sign Up</div></a
-                      ><a
-                        href="/authentication-pages/sign-in"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Sign In</div></a
-                      ><a
-                        href="/authentication-pages/forgot-password"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Forgot Password</div></a
-                      ><a
-                        href="/authentication-pages/reset-password"
-                        class="fotter-single-link w-inline-block"
-                        ><div>Reset Password</div></a
-                      >
+                      <!-- <a href="/inner-pages/contact-us" class="fotter-single-link w-inline-block"><div>Contact Us</div></a>
+                      <a href="/authentication-pages/sign-up" class="fotter-single-link w-inline-block"><div>Sign Up</div></a>
+                      <a href="/authentication-pages/sign-in" class="fotter-single-link w-inline-block"><div>Sign In</div></a> -->
+                      <!-- <a href="/authentication-pages/forgot-password" class="fotter-single-link w-inline-block"><div>Forgot Password</div></a> -->
+                      <!-- <a href="/authentication-pages/reset-password" class="fotter-single-link w-inline-block"><div>Reset Password</div></a> -->
                     </div>
                   </div>
                 </div>
@@ -1251,9 +1235,9 @@
                   <div class="fotter-link-right-single-flex">
                     <div class="fotter-link-right-single-wrap">
                       <div class="fotter-single-link-wrap">
-                        <h5 class="fotter-single-link-title">Template</h5>
+                        <h5 class="fotter-single-link-title">Press Mentions</h5>
                         <img
-                          src="../images/service-20shape-20img.webp"
+                          src="images/service-20shape-20img.webp"
                           loading="lazy"
                           alt=""
                           class="fotter-div-img-shape"
@@ -1262,34 +1246,36 @@
                       <div class="fotter-single-link-flex">
                         <div class="fotter-single-link-div">
                           <a
-                            href="/404"
+                            href="https://www.instagram.com/hexovision/"
+                            target="_blank"
                             class="fotter-single-link w-inline-block"
-                            ><div>404 Not Found</div></a
-                          ><a
-                            href="/401"
-                            class="fotter-single-link w-inline-block"
-                            ><div>Password Protected</div></a
-                          ><a
-                            href="/utility-pages/changelog"
-                            class="fotter-single-link w-inline-block"
-                            ><div>Changelog</div></a
-                          ><a
-                            href="/utility-pages/license"
-                            class="fotter-single-link w-inline-block"
-                            ><div>License</div></a
-                          ><a
-                            href="/utility-pages/style-guide"
-                            class="fotter-single-link w-inline-block"
-                            ><div>Style Guide</div></a
+                            ><div>Hindustan Times</div></a
                           >
+                          <a
+                            href="https://www.facebook.com/profile.php?id=61558529533907"
+                            target="_blank"
+                            class="fotter-single-link w-inline-block"
+                            ><div>Business Journal</div></a
+                          >
+                          <a
+                            href="https://www.facebook.com/profile.php?id=61558529533907"
+                            target="_blank"
+                            class="fotter-single-link w-inline-block"
+                            ><div>News Herald</div></a
+                          >
+                          
+                          <!-- <a href="/utility-pages/changelog" class="fotter-single-link w-inline-block"><div>Changelog</div></a> -->
+                          <!-- <a href="/utility-pages/license" class="fotter-single-link w-inline-block"><div>License</div></a> -->
+                          <!-- <a href="/utility-pages/style-guide" class="fotter-single-link w-inline-block"><div>Style Guide</div></a> -->
                         </div>
                       </div>
                     </div>
+
                     <div class="fotter-link-right-single-wrap">
                       <div class="fotter-single-link-wrap">
                         <h5 class="fotter-single-link-title">Contact</h5>
                         <img
-                          src="../images/service-20shape-20img.webp"
+                          src="images/service-20shape-20img.webp"
                           loading="lazy"
                           alt=""
                           class="fotter-div-img-shape"
@@ -1299,32 +1285,31 @@
                         <div class="fotter-single-link-div">
                           <div class="fotter-single-link">
                             <img
-                              src="../images/smart-phone-01-stroke-sharp-201.webp"
+                              src="images/smart-phone-01-stroke-sharp-201.webp"
                               loading="lazy"
                               alt=""
                               class="fotter-contact-arow"
                             />
-                            <div>(000) 012 3456 7890</div>
+                            <div><a href="tel:+918923170795" style="text-decoration: none; color: white;">+91 8923170795</a> </div>
                           </div>
                           <div class="fotter-single-link">
                             <img
-                              src="../images/mail-01-stroke-sharp-201.webp"
+                              src="images/mail-01-stroke-sharp-201.webp"
                               loading="lazy"
                               alt=""
                               class="fotter-contact-arow"
                             />
-                            <div>marqencyzf@email.com</div>
+                            <div><a href="mailto:contact@hexovision.com" style="text-decoration: none; color: white;">contact@hexovision.com</a></div>
                           </div>
                           <div class="fotter-single-link">
                             <img
-                              src="../images/location-01-stroke-sharp-201.webp"
+                              src="images/location-01-stroke-sharp-201.webp"
                               loading="lazy"
                               alt=""
                               class="fotter-contact-arow"
                             />
                             <div class="fotter-contact-text">
-                              1234 Valencia Street, Suite 101, San Francisco, CA
-                              94110
+                              141 Park Road, Dehradun, Uttrakhand,India
                             </div>
                           </div>
                         </div>
@@ -1336,23 +1321,12 @@
               <div class="fotter-bottom-shape"></div>
               <div class="copy-right-text">
                 © Copyright -
-                <a href="/" class="copy-right-link">Marqency ZF</a> | Designed
-                by
-                <a
-                  href="https://webflow.com/templates/designers/shohana-sharmin"
-                  target="_blank"
-                  class="copy-right-link"
-                  >Zohaflow </a
-                >-
-                <a href="/utility-pages/license" class="copy-right-link"
-                  >Licensing </a
-                >Powered by
-                <a
-                  href="https://webflow.com/"
-                  target="_blank"
-                  class="copy-right-link"
-                  >Webflow</a
+                <a href="//" class="copy-right-link" style="text-decoration: none;"
+                  >Hexovision Technologies Private Limited</a
                 >
+                <!-- <a href="https://webflow.com/templates/designers/shohana-sharmin" target="_blank" class="copy-right-link">Zohaflow </a>
+                <a href="/utility-pages/license" class="copy-right-link">Licensing </a>Powered by
+                <a href="https://webflow.com/" target="_blank" class="copy-right-link">Webflow</a> -->
               </div>
             </div>
           </div>
