Blogs Update And t&c

--- a/index.html
+++ b/index.html
@@ -6186,16 +6186,15 @@
                     <div class="fotter-single-link-div">
                       <a href="/blogs.html" class="fotter-single-link w-inline-block"><div>Blogs</div></a>
                       <a
-                        href="/inner-pages/projects"
+                        href="privacy-policy.html"
                         class="fotter-single-link w-inline-block"
                         ><div>Privacy Policies</div></a
                       >
                       <a
-                        href="/inner-pages/contact-us.html"
+                        href="terms-condition.html"
                         class="fotter-single-link w-inline-block"
-                      >
-                      Terms & Conditions</a
-                      >
+                      >Terms & Conditions</a>
+                      
                       <!-- <a href="https://marqencyzf.webflow.io/team/mr-david-martinez" class="fotter-single-link w-inline-block"><div>Team Single</div></a> -->
                       <!-- <a href="/inner-pages/articles" class="fotter-single-link w-inline-block"><div>Articles</div></a> -->
                       <!-- <a href="https://marqencyzf.webflow.io/blog/how-to-create-an-engaging-content-that-converts" class="fotter-single-link w-inline-block"><div>Article Single</div></a> -->
@@ -6217,7 +6216,7 @@
                   <div class="fotter-link-right-single-flex">
                     <div class="fotter-link-right-single-wrap">
                       <div class="fotter-single-link-wrap">
-                        <h5 class="fotter-single-link-title">Press Mentions</h5>
+                        <h5 class="fotter-single-link-title">Social Handles</h5>
                         <img
                           src="images/service-20shape-20img.webp"
                           loading="lazy"
@@ -6231,19 +6230,19 @@
                             href="https://www.instagram.com/hexovision/"
                             target="_blank"
                             class="fotter-single-link w-inline-block"
-                            ><div>Hindustan Times</div></a
+                            ><div>Instagram</div></a
                           >
                           <a
                             href="https://www.facebook.com/profile.php?id=61558529533907"
                             target="_blank"
                             class="fotter-single-link w-inline-block"
-                            ><div>Business Journal</div></a
+                            ><div>Facebook</div></a
                           >
                           <a
-                            href="https://www.facebook.com/profile.php?id=61558529533907"
+                            href="https://www.linkedin.com/company/hexovision"
                             target="_blank"
                             class="fotter-single-link w-inline-block"
-                            ><div>News Herald</div></a
+                            ><div>LinkedIn</div></a
                           >
                           
                           <!-- <a href="/utility-pages/changelog" class="fotter-single-link w-inline-block"><div>Changelog</div></a> -->
