--- a/index.html
+++ b/index.html
@@ -1197,7 +1197,7 @@
                 style="opacity: 0"
               >
                 <div class="section-title-wrapper benner-title-wrapper">
-                  <h1 class="section-title benner-top-title-wrapper">
+                  <h1 class="section-title benner-top-title-wrapper mains">
                     Get Remarkable Results with Marketing!
                   </h1>
                 </div>
