--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta
       content="Home | Hexovision Technologies Private Limited"
       property="og:title"
-    />
+      />
     <meta
       content="Home | Hexovision Technologies Private Limited"
       property="twitter:title"
@@ -730,10 +730,10 @@
       }
 </style> -->
 
-    <!-- <link href="https://fonts.googleapis.com" rel="preconnect"> -->
-    <!-- <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous"> -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script> -->
-    <!-- <script type="text/javascript">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+    <script type="text/javascript">
       WebFont.load({
         google: {
           families: [
@@ -742,8 +742,8 @@
           ],
         },
       });
-    </script> -->
-    <!-- <script type="text/javascript">
+    </script>
+    <script type="text/javascript">
       !(function (o, c) {
         var n = c.documentElement,
           t = " w-mod-";
@@ -752,7 +752,7 @@
             (o.DocumentTouch && c instanceof DocumentTouch)) &&
             (n.className += t + "touch");
       })(window, document);
-    </script> -->
+    </script>
     <!-- <link href="images/favicon.webp" rel="shortcut icon" type="image/x-icon"> -->
     <!-- <link href="images/app-icon.webp" rel="apple-touch-icon"> -->
     <!-- <script type="text/javascript">
@@ -790,7 +790,6 @@
       };
     </script>
     <!-- Calendly badge widget end -->
-
 
   </head>
   <body>
